@@ -1,5 +1,5 @@
 /*
- * $Id: libbk.h,v 1.64 2001/11/20 22:20:26 jtt Exp $
+ * $Id: libbk.h,v 1.65 2001/11/21 00:01:47 jtt Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -835,6 +835,7 @@ extern struct bk_protoinfo *bk_protoinfo_clone (bk_s B, struct bk_protoinfo *obs
 extern int bk_netutils_get_sa_len(bk_s B, struct sockaddr *sa);
 extern int bk_parse_endpt_spec(bk_s B, char *urlstr, char **hoststr, char *defhoststr, char **servicestr,  char *defservicestr, char **protostr, char *defprotostr);
 extern int bk_netutils_start_service(bk_s B, struct bk_run *run, char *url, char *defhoststr, char *defservstr, char *defprotostr, char *securenets, bk_bag_callback_t callback, void *args, int backlog, bk_flags flags);
+extern int bk_netutils_make_conn(bk_s B, struct bk_run *run, char *rurl, char *defrhost, char *defrserv, char *lurl, char *deflhost, char *deflserv, char *defproto, char *sercurenets, u_long timeout, bk_bag_callback_t callback, void *args, bk_flags flags );
 
 
 
